setting variable colors and imported new font-family Roboto Mono

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <title>Celio - Web Developer</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <header class="header-wrapper">
+    <div class="header">
+      <div class="checkbox-container">
+        <div class="checkbox-wrapper">
+          <input type="checkbox" id="toggle">
+          <label class="checkbox" for="toggle">
+            <div class="trace"></div>
+            <div class="trace"></div>
+            <div class="trace"></div>
+          </label>
+          <div class="menu"></div>
+          <nav class="menu-items">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Projects</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <h1>Celio V. Junior</h1>
+    <h2>Web Developer</h2>
+  </header>
 </body>
 </html>
