home page complete, backgroundTransiction effect complete, change the font-family and styles for the anchor tag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     </div>
     <h1>Celio V. Junior</h1>
     <h2>Web Developer</h2>
+    <div class="social-media">
+      <a href="linkedin.com/in/celiovjunior/">Linkedin</a>
+      <a href="https://github.com/celiovjunior">Github</a>
+    </div>
   </header>
 </body>
 </html>
