starting the html of the main section, card container, card styles and animation

--- a/index.html
+++ b/index.html
@@ -32,9 +32,35 @@
     <h1>Celio V. Junior</h1>
     <h2>Web Developer</h2>
     <div class="social-media">
-      <a href="linkedin.com/in/celiovjunior/">Linkedin</a>
+      <a href="https://linkedin.com/in/celiovjunior">Linkedin</a>
       <a href="https://github.com/celiovjunior">Github</a>
     </div>
   </header>
+  <main class="container">
+    <div class="card-container">
+      <div class="card-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non qui ex fuga molestias neque. Similique, dolor maiores provident labore magni officia unde enim cupiditate dolorem optio, incidunt, ratione consequatur officiis!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non qui ex fuga molestias neque. Similique, dolor maiores provident labore magni officia unde enim cupiditate dolorem optio, incidunt, ratione consequatur officiis!
+      </div>
+      <div class="card">
+        <div class="card-wrapper">
+          <h2>Github</h2>
+          <p>See my projects</p>
+        </div>
+      </div>      
+    </div>
+    <div class="card-container">
+      <div class="card">
+        <div class="card-wrapper">
+          <h2>Linkedin</h2>
+          <p>Follow my career</p>
+        </div>
+      </div>
+      <div class="card-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non qui ex fuga molestias neque. Similique, dolor maiores provident labore magni officia unde enim cupiditate dolorem optio, incidunt, ratione consequatur officiis!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non qui ex fuga molestias neque. Similique, dolor maiores provident labore magni officia unde enim cupiditate dolorem optio, incidunt, ratione consequatur officiis!
+      </div>      
+    </div>
+  </main>
 </body>
 </html>
