--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
       </div>      
     </div>
   </main>
+  <footer class="footer">
+    Portfolio website made by Celio V. Junior 😎
+  </footer>
 </body>
 </html>
